<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_"
    app:behavior_hideable="true"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    app:behavior_peekHeight="@dimen/_30sdp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/jumlah_pinjaman"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/grey200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvJumlahPinjaman"
        android:text="@string/jumlah_pinjaman"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/tenor"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/grey200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/atvTenor"
        android:text="@string/jumlah_pinjaman"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/biaya_admin"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/grey200"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvAdmin"
        android:text="@string/biaya_admin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bBatal"
            android:text="@string/batal"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="end"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bLanjut"
            android:textSize="@dimen/_12ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanjut"
            app:strokeColor="@color/blue900"
            style="?attr/materialButtonOutlinedStyle"
            />

    </LinearLayout>



</LinearLayout>